doku/tests/compiletest/doku_attribute/non_existent_parameter.rs
use doku::Document;

#[derive(Document)]
struct Person {
    #[doku(non_existent_parameter)]
    name: String,
}

fn main() {
    println!("{}", doku::to_json::<Person>());
}